--- a/usr/themes/rozv/style.css
+++ b/usr/themes/rozv/style.css
@@ -123,8 +123,8 @@ img.avatar {float:left; margin-right:10px;}
 #sidebar {background:#fff; border:1px solid #ddd; padding:24px; margin-top:20px; width:800px; display:table; overflow:hidden;}
 .side_box {width:240px; display:table-cell; vertical-align:top;}
 .side_box a {color:#666;}
-.side_1 {padding-right:20px;}
-.side_2 {border-left:1px solid #ddd; border-right:1px solid #ddd; padding:0 19px; font-size:13px;}
+.side_1 {padding-right:20px;width:30%}
+.side_2 {border-left:1px solid #ddd; border-right:0px solid #ddd; padding:0 19px; font-size:13px;}
 .side_3 {padding-left:20px;}
 .side_3 li {margin-bottom:0px; overflow:hidden;}
 .icon {float:left; margin-right:10px;}
@@ -137,3 +137,5 @@ img.avatar {float:left; margin-right:10px;}
 /* Footer */
 #footer {font-size:12px; font-family:Tahoma, Helvetica, Arial; color:#999; padding:15px 0; text-align:center;}
 #footer a {color:#666;}
+.side_2 p {margin-top:10px;}
+.footer_avatar {border-radius:50%;vertical-align:middle;padding-right: 13px;margin-top: -9px;}
