--- a/usr/themes/rozv/style.css
+++ b/usr/themes/rozv/style.css
@@ -71,6 +71,7 @@ legend {font-weight:bold;}
 .post {background:#fff; border:1px solid #ddd; box-shadow:0 0 1px 2px #e9e9e9; padding:19px 24px 24px; margin-bottom:20px; word-wrap:break-word; word-break:normal; overflow:hidden;}
 .post_head {font-size:12px; color:#888; margin-bottom:20px;}
 .post_head a {color:#333;}
+.post_artice {background:url(images/paper.png)}
 .post_artice img {max-width:800px; height:auto;}
 .post_artice p {font-size:16px; margin-bottom:20px;}
 .post_artice p:last-child {margin-bottom:0;}
