--- a/usr/plugins/PrismSyntaxHighlighter/prism.css
+++ b/usr/plugins/PrismSyntaxHighlighter/prism.css
@@ -6,6 +6,7 @@
 
 code[class*="language-"],
 pre[class*="language-"] {
+	font-size:1em;
 	color: black;
 	text-shadow: 0 1px white;
 	font-family: Consolas, Monaco, 'Andale Mono', monospace;
