--- a/usr/themes/rozv/style.css
+++ b/usr/themes/rozv/style.css
@@ -63,10 +63,11 @@ legend {font-weight:bold;}
 #menu .current {border-bottom:2px solid #d3d3d3; line-height:40px; height:38px;}
 #menu {float:left;}
 /* Search */
-#search {background:#fafafa; border:1px solid #ccc; border-radius:3px; box-shadow:inset 1px 1px 3px #ddd; padding:3px 5px; height:16px; margin-top:6px; float:right;}
-#search input {border:none; background:none; box-shadow:none; width:130px; height:16px; line-height:16px; vertical-align:top;}
-#search button {background:url(images/search.png) no-repeat; width:16px; height:16px; text-indent:-999px; vertical-align:top; border:none; cursor:pointer; margin-left:-5px; font-size:0;}
-#search button:hover {background:url(images/search_hover.png) no-repeat;}
+.search {background:#fafafa; border:1px solid #ccc; border-radius:3px; box-shadow:inset 1px 1px 3px #ddd; padding:3px 5px; height:16px; margin-top:6px; float:right;}
+.search input {border:none; background:none; box-shadow:none; width:130px; height:16px; line-height:16px; vertical-align:top;}
+.search button {background:url(images/search.png) no-repeat; width:16px; height:16px; text-indent:-999px; vertical-align:top; border:none; cursor:pointer; margin-left:-5px; font-size:0;}
+.search button:hover {background:url(images/search_hover.png) no-repeat;}
+#search2 {display:none}
 /* Content */
 .post {background:#fff; border:1px solid #ddd; box-shadow:0 0 1px 2px #e9e9e9; padding:19px 24px 24px; margin-bottom:20px; word-wrap:break-word; word-break:normal; overflow:hidden;}
 .post_head {font-size:12px; color:#888; margin-bottom:20px;}
@@ -121,12 +122,12 @@ img.avatar {float:left; margin-right:10px;}
 .login_meta input {width:99%; height:26px; font-size:14px;}
 .login_meta li.urltext {width:33%;}
 /* Sidebar */
-#sidebar {background:#fff; border:1px solid #ddd; padding:24px; margin-top:20px; width:800px; display:table; overflow:hidden;}
+#sidebar {background:#fff; border:1px solid #ddd; padding:24px 0; margin-top:20px; width:800px; display:table; overflow:hidden;}
 .side_box {width:240px; display:table-cell; vertical-align:top;}
 .side_box a {color:#666;}
-.side_1 {padding-right:20px;width:30%}
-.side_2 {border-left:1px solid #ddd; border-right:0px solid #ddd; padding:0 19px; font-size:13px;}
-.side_3 {padding-left:20px;}
+.side_1 {padding-right:20px;width:30%;padding:0 24px;}
+.side_2 {border-left:1px solid #ddd; border-right:0px solid #ddd; padding:10px 24px; font-size:13px;}
+.side_3 {padding-left:20px;padding:0 24px;}
 .side_3 li {margin-bottom:0px; overflow:hidden;}
 .icon {float:left; margin-right:10px;}
 .icon a {background:url(images/icon.png) no-repeat; display:block; width:85px; height:24px; font-size:0; text-indent:-999; overflow: hidden;}
@@ -138,5 +139,28 @@ img.avatar {float:left; margin-right:10px;}
 /* Footer */
 #footer {font-size:12px; font-family:Tahoma, Helvetica, Arial; color:#999; padding:15px 0; text-align:center;}
 #footer a {color:#666;}
-.side_2 p {margin-top:18px;}
-.footer_avatar {border-radius:50%;vertical-align:middle;padding-right: 13px;margin-top: -9px;}
+.about_me {margin-top:10px}
+.footer_avatar {border-radius:50%; padding-right:13px; float:left}
+.footer_idesc {float:left; margin-top:15px; padding: 0 10px}
+
+@media screen and (max-width: 960px) {
+	#wrap {width:100%;}
+	#menu {margin-left:30px;}
+	#search {display:none;}
+	.search {width:85%;float:none;margin-left:30px}
+	.search input {width:80%;}
+	.search button {float:right;margint-right:10px}
+	#search2 {display:block;height:40px;width:100%;text-align:center;}	
+	.page-navigator {margin-left: 20px;}
+	#sidebar{width:100%;}
+	.side_box {width:auto; display:block; vertical-align:center;}
+	.side_1 {width:auto;}
+	.side_2 {width:auto; margin-top:10px; border-left:0; border-right:0; border-top:1px dashed #ddd;}
+	.about_me{text-align:center;}
+	.footer_avatar {float:none;}
+	.footer_idesc {float:none;}
+	.login_meta li.urltext{width:99%;}
+	.login_meta li {float:none;width:99%}
+	#comment_form textarea{height:auto;width:96%}
+	#comment_form button {width:99%;}
+}
